Numéro département et nom région
